fixing tiny layout issues

--- a/css/base.less
+++ b/css/base.less
@@ -219,6 +219,7 @@ article {
 		grid-gap: @default-line-height-length;
 		grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 		gap: @default-line-height-length;
+		margin-bottom: @default-line-height-length;
 	}
 
 	.post {
